# ProtoDB

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  ROADMAP.md  build.rs
clients/python/: .gitignore  regenerate.sh  setup.py
clients/python/protodb/: client.py  protodb_pb2.py  protodb_pb2_grpc.py
clients/rust/: Cargo.toml  build.rs
clients/rust/src/: errors.rs  index.rs  lib.rs  wasm.rs
crates/protoctl/: Cargo.toml  build.rs
crates/protoctl/src/: lib.rs  main.rs
crates/rocksdb-explorer/: Cargo.toml
crates/rocksdb-explorer/src/: main.rs
crates/schema/: Cargo.toml
crates/schema/src/: encoding.rs  errors.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/basic/: example.py  gen-protos.sh  setup.sh
examples/basic/src/: client.py  example.py
examples/basic/user/: user_pb2.py  user_statistics_pb2.py
examples/protos/: user.proto  user_statistics.proto
examples/python/simple/: gen-protos.sh
examples/simple/: gen-proto-py  gen-protos.sh  requirements.txt  user.proto
examples/simple/src/: client.py  example  example.py  main.py  user_pb2.py
examples/wasm/: Cargo.toml  build.rs
examples/wasm/src/: lib.rs
proto/protod/: database_create.proto  protod.proto
proto/protodb/: collection_create.proto  database_create.proto  database_list.proto  extensions.proto  protodb.proto
proto/protodb/collection/: create.proto  find_object.proto  get_info.proto  insert_object.proto  list.proto
proto/protodb/database/: create.proto  list.proto  register_wasm_module.proto  run_wasm.proto
proto/protodb/index/: create.proto  list.proto
proto/protodb/object/: find.proto
proto/protodb/wasm/: register.proto  run.proto
protos/protodb/collection/: create.proto  list.proto
protos/protodb/database/: list.proto
protos/protodb/index/: create.proto  get.proto  index.proto
protos/protodb/object/: insert.proto
protos/protodb/wasm/: get_info.proto
protos/server/: collection.proto  collection_create.proto  collection_define.proto  collection_delete.proto  collection_list.proto  database.proto  database_create.proto  database_define.proto  database_delete.proto  database_list.proto  find.proto  insert.proto  server.proto
protos/test/: test.proto
scripts/: compile-protos  gen-proto-rs
src/: lib.rs  main.rs
src/catalog/: collection.rs  database.rs  index.rs  mod.rs
src/catalog/errors/: collection.rs  database.rs
src/database/: mod.rs
src/grpc/: generated.rs  handler.rs  mod.rs  server.rs
src/grpc/handler/: collection.rs  database.rs  mod.rs
src/index/: errors.rs  mod.rs
src/schema/: encoding.rs  errors.rs  mod.rs
src/server/: errors.rs  mod.rs  result.rs
src/server/collection/: errors.rs  find.rs  insert.rs  mod.rs  result.rs
src/server/database/: errors.rs  mod.rs  result.rs
src/server/grpc/: mod.rs  sync.rs
src/server/protos/: collection.rs  collection_create.rs  collection_define.rs  collection_delete.rs  collection_list.rs  database.rs  database_create.rs  database_define.rs  find.rs  insert.rs  mod.rs  server_grpc.rs
src/server/query_planner/: errors.rs  mod.rs  result.rs
src/server/schema/: decode_field.rs  decode_object.rs  encode_field.rs  errors.rs  mod.rs  result.rs
src/server/util/: encoding.rs  mod.rs  protobuf.rs
src/storage/: errors.rs  mod.rs  storage_engine.rs
src/storage/catalog/: collection.rs  database.rs
src/storage/engine/: mod.rs
src/storage/errors/: collection.rs  database.rs
src/storage/in_memory/: collection.rs  database.rs  mod.rs
src/storage/kv/: mod.rs
src/storage/schema/: decode.rs  encoding.rs  errors.rs  mod.rs
src/storage/storage_engine/: mod.rs
src/transport/grpc/: mod.rs  server.rs
src/util/encoding/: mod.rs
src/util/sync/: intention_lock.rs  mod.rs  (+1 more)
src/wasm/: mod.rs
tests/: mod.rs  util.rs
tests/protos/: mod.rs  test.rs
(+103 files in other folders)
