[package]
name = "protodb"
version = "0.0.1"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]

[lib]
name = "libprotodb"
path = "src/lib.rs"

[[bin]]
name = "protod"
path = "src/main.rs"

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
grpc = { git  = "https://github.com/stepancheg/grpc-rust" }
lazy_static = "0.1"
lmdb-rs = "0.7.2"
protobuf = { git = "http://github.com/stepancheg/rust-protobuf" }
