[package]
name = "protodb"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "clients/rust",
    "crates/protoctl",
    "crates/rocksdb-explorer",
    "crates/schema",
    "crates/wasm",
    "examples/wasm",
]

[dependencies]
bytes = "0.4"
byteorder = "1.2"
clap = "2"
env_logger = { version = "0.5", default-features = false }
futures = "0.1"
http = "0.1"
lazy_static = "1.1"
log = "0.4"
pretty_env_logger = "0.2"
protodb-schema = { path = "crates/schema" }
prost = "0.4"
prost-types = "0.4"
prost-derive = "0.4"
rocksdb = "0.10"
tokio-core = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-service = { git = "https://github.com/tower-rs/tower" }
wasmi="0.4.2"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
