[package]
name = "protodb-example-wasm"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
protodb-wasm = { path = '../../crates/wasm', version = '0.1' }
wasm-bindgen = "0.2.28"

[build-dependencies]
prost-build = "0.4"
